Attempt redirect to function.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
   publish = "publish"
   command = "export PATH=$PATH:. && gem install jekyll bundler && wget -qO- https://github.com/apache/incubator-openwhisk-cli/releases/download/latest/OpenWhisk_CLI-latest-linux-amd64.tgz | tar zxf - wsk && ./wsk property set --apihost $WSK_API_HOST --auth $WSK_API_KEY && echo ok && ls && ./do.sh --deploy"
+
+[[redirects]]
+  from = "/action/whiskers/hello.json"
+  to = "https://openwhisk.ng.bluemix.net/api/v1/web/wsk_demos/whiskers/hello.json"
+  status = 200
+  force = true
