--- a/config.template
+++ b/config.template
@@ -3,7 +3,7 @@ title: whiskers.cat
 baseurl: ""
 deployurl: "https://whiskers.cat"
 # The base url to run actions.
-wskurl: "$__OW_WEB_ACTIONS_BASE_PATH"
+wskurl: "/action"
 
 # Build settings
 markdown: kramdown
